Configuracion de controladores basicos

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,8 +31,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Clients" asp-action="Index">Cliente</a></li>
+                    <li><a asp-area="" asp-controller="VideoGames" asp-action="Index">Video juego</a></li>
+                    <li><a asp-area="" asp-controller="LoanHistories" asp-action="Index">Historial</a></li>
                 </ul>
             </div>
         </div>
